WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123505
REGRESSION(
r158214
): It made zillion tests crash on GTK and EFL
https://bugs.webkit.org/show_bug.cgi?id=123505
Summary
REGRESSION(r158214): It made zillion tests crash on GTK and EFL
Csaba Osztrogonác
Reported
2013-10-30 03:22:44 PDT
http://trac.webkit.org/changeset/158214
made almost all tests crash on GTK and EFL See the EFL bot for detailed crash logs:
http://build.webkit.org/results/EFL%20Linux%2064-bit%20Release%20WK1/r158225%20%282431%29/batterystatus/event-after-navigation-crash-log.txt
Unfortunately the GTK release bot doesn't provide crash logs and tests pass on the GTK debug bot. Shouldn't we disable simple line layout again on !MAC platforms until proper fix?
Attachments
Patch
(1.40 KB, patch)
2013-10-30 04:05 PDT
,
Zan Dobersek
koivisto
: review-
koivisto
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-10-30 03:42:32 PDT
The Layout struct should use the WTF_MAKE_FAST_ALLOCATED macro. TcMalloc (which is enabled on release configurations of the affected ports) was used to allocate the memory, so it should also handle its deallocation.
Bug #120246
covered a very similar regression.
Zan Dobersek
Comment 2
2013-10-30 04:05:53 PDT
Created
attachment 215494
[details]
Patch
Antti Koivisto
Comment 3
2013-10-30 04:15:27 PDT
https://trac.webkit.org/r158265
Antti Koivisto
Comment 4
2013-10-30 04:15:47 PDT
Comment on
attachment 215494
[details]
Patch Already fixed
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug