REGRESSION(r158214): It made zillion tests crash on GTK and EFL https://bugs.webkit.org/show_bug.cgi?id=123505

* rendering/SimpleLineLayout.h: Add WTF_MAKE_FAST_ALLOCATED



Canonical link: https://commits.webkit.org/141633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158265 268f45cc-cd09-0410-ab3c-d52691b4dbfc